# hw2-gui

./: .gitignore  ChangeLog.md  README.md  hw2-gui.cabal  stack.yaml
app/: .Main.hs.swo  Main.hs
src/: Drawing.hs  Expression.hs  Geom2D.hs  HW2.hs  Image.hs  Settings.hs  Utils.hs
